--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,14 +1,19 @@
-🩵 Expanded exploit protections: Main executable and Windows Service now enforce: DisableNonSystemFonts; BlockRemoteImageLoads; BlockLowLabelImageLoads; EnableExportAddressFilter (EAF) and EAF+; EnableImportAddressFilter; ROP mitigations (EnableRopStackPivot, EnableRopCallerCheck); UserShadowStack (incl. StrictMode); MicrosoftSignedOnly; AllowStoreSignedBinaries.
-Service also adds BlockDynamicCode and is now compatible with Arbitrary Code Guard (ACG).
+🩵 Improved the visual design for the app's Protect page.
 
-🩵 New Cryptographic Bill of Materials (CBOM) page: Provides a system-wide inventory of Windows cryptography (algorithms, curves, cipher suites, providers) sourced directly from underlying providers for fidelity. Delivers SBOM-like transparency for audits, baseline conformance checks, drift detection, identifying legacy/weak primitives, and planning for post-quantum transitions.
+🩵 Optional Windows Features improvements:
 
-🩵 Baseline enhancements: Multi baseline selection for Microsoft Security Baselines and Microsoft 365 Apps Baseline via a UI ComboBox. Apply and verify against different baselines (e.g., Windows 11 22H2 through 25H2, plus Windows Server 2025) per system.
+   ❤️ ListView stays scrollable while background activities run.
 
-🩵 Offline baseline support: apply, verify, and remove baselines without internet by supplying official ZIP files—fulfilling a community request.
+   ❤️ Verify / Apply / Remove buttons disable during other activities; the button that started the activity remains enabled so you can cancel it.
 
-🩵 Improved code quality.
+   ❤️ ListView split into Recommended (the wiki-documented features/capabilities the app manages) and Others.
 
-🩵 Improved the UI of the Attack Surface Reduction page by utilizing the available space better.
+   ❤️ DISM component is now compatible with Arbitrary Code Guard (ACG) and many DISM operations (especially listing features/capabilities) are faster.
 
-🩵 Added a new button to the sidebar that allows you to optimize memory usage of the app and try to reduce it.
+   ❤️ New Retrieve Recommended Only button returns only the features the app verifies/applies/removes (much faster than Retrieve All).
+
+   ❤️ The ListView now displays feature descriptions (and recommended capability descriptions) for easier understanding.
+
+   ❤️ Removing optional features now also deletes the feature payload from disk to free space (reinstall requires download from Windows Update).
+
+🩵 Microsoft Defender — Exclusion: New unified Exclusion section that aggregates File/Folder, Process, Extension, Controlled Folder Access, and Attack Surface Reduction rules (ASR) exclusions. You can retrieve, filter, sort, search, add, and remove exclusions — added in response to a community feature request.
